Resolved warnings