@@ -10,22 +10,22 @@ public class CombinationsTest {
 
     @Test
     public void testCombinations1toN_1() throws Exception {
-        List<Integer[]> combinations1toN = Combinations.combinations1toN(new Integer(1));
+        List<Integer[]> combinations1toN = Combinations.combinations1toN(Integer.valueOf(1));
         assertEquals(1, combinations1toN.size());
 
-        Integer[] result = new Integer[] { new Integer(1) };
+        Integer[] result = new Integer[] { Integer.valueOf(1) };
 
         assertArrayEquals(result, combinations1toN.get(0));
     }
 
     @Test
     public void testCombinations1toN_2() throws Exception {
-        List<Integer[]> combinations1toN = Combinations.combinations1toN(new Integer(1), new Integer(2));
+        List<Integer[]> combinations1toN = Combinations.combinations1toN(Integer.valueOf(1), Integer.valueOf(2));
         assertEquals(3, combinations1toN.size());
 
-        Integer[] result0 = new Integer[] { new Integer(1) };
-        Integer[] result1 = new Integer[] { new Integer(2) };
-        Integer[] result2 = new Integer[] { new Integer(1), new Integer(2) };
+        Integer[] result0 = new Integer[] { Integer.valueOf(1) };
+        Integer[] result1 = new Integer[] { Integer.valueOf(2) };
+        Integer[] result2 = new Integer[] { Integer.valueOf(1), Integer.valueOf(2) };
 
         assertArrayEquals(result0, combinations1toN.get(0));
         assertArrayEquals(result1, combinations1toN.get(1));
@@ -34,17 +34,17 @@ public class CombinationsTest {
 
     @Test
     public void testCombinations1toN_3() throws Exception {
-        List<Integer[]> combinations1toN = Combinations.combinations1toN(new Integer(1), new Integer(2),
-                new Integer(3));
+        List<Integer[]> combinations1toN = Combinations.combinations1toN(Integer.valueOf(1), Integer.valueOf(2),
+                Integer.valueOf(3));
         assertEquals(7, combinations1toN.size());
 
-        Integer[] result0 = new Integer[] { new Integer(1) };
-        Integer[] result1 = new Integer[] { new Integer(2) };
-        Integer[] result2 = new Integer[] { new Integer(3) };
-        Integer[] result3 = new Integer[] { new Integer(1), new Integer(2) };
-        Integer[] result4 = new Integer[] { new Integer(1), new Integer(3) };
-        Integer[] result5 = new Integer[] { new Integer(2), new Integer(3) };
-        Integer[] result6 = new Integer[] { new Integer(1), new Integer(2), new Integer(3) };
+        Integer[] result0 = new Integer[] { Integer.valueOf(1) };
+        Integer[] result1 = new Integer[] { Integer.valueOf(2) };
+        Integer[] result2 = new Integer[] { Integer.valueOf(3) };
+        Integer[] result3 = new Integer[] { Integer.valueOf(1), Integer.valueOf(2) };
+        Integer[] result4 = new Integer[] { Integer.valueOf(1), Integer.valueOf(3) };
+        Integer[] result5 = new Integer[] { Integer.valueOf(2), Integer.valueOf(3) };
+        Integer[] result6 = new Integer[] { Integer.valueOf(1), Integer.valueOf(2), Integer.valueOf(3) };
 
         assertArrayEquals(result0, combinations1toN.get(0));
         assertArrayEquals(result1, combinations1toN.get(1));
